CORE-404 removes unnecessary sorting; the repository sorts already
Extends the sorting in repository with a second criteria.